src/test/deca/context/valid/readfloat.deca
// Description :
// test de l'instruction readFloat()
//
// Résultats :
// ok

{
  float x;
  x = readFloat();
}
