src/test/deca/context/invalid/op_un_minus_null.deca
// Description :
// test d'un moins unaire sur null
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : Moins unaire sur un objet de type null impossible (règle 3.37)

{
  -null;
}
